# otlbook

./: .gitignore  CHANGELOG.md  Cargo.toml  JayNotebook.otl.html  Justfile  LICENSE  LICENSE-MIT  Makefile  OtlBookIntro.otl.html  README.md  deps.edn  flake.nix  index.html  lighttpd.conf  otlb.js  otlbook.py  otltool.py  pom.xml  raindrop.py  shell.nix  show-important  sort-by-date  votl.js
anki/: Cargo.toml
anki-connect/: Cargo.toml
anki-connect/src/: lib.rs
anki/src/: lib.rs
assets/: style.css
base/: Cargo.toml
base/src/: collection.rs  date.rs  lib.rs  outline.rs  parse.rs  section.rs  symbol.rs  tree.rs  typed_attribute.rs
cache/: Cargo.toml
dev/: user.clj
examples/: fix-bookmarks.rs
githooks/: README  pre-push
import/: Cargo.toml
import/src/: goodreads.rs  pocket.rs
nix/: sources.json
parser/: Cargo.toml
parser/src/: anki.rs  date.rs  de.rs  lib.rs  old_de.rs  old_outline.rs  old_ser.rs  old_tests.rs  outline.rs  outline2.rs  ser.rs  tests.rs
parser/test/: otlbook.otl  otlbook.ron  test.otl  test.ron
persist/: Cargo.toml
resources/: page.html
scrape/: Cargo.toml
scrape/src/: goodreads.rs  google_reader.rs  lib.rs  pocket.rs  wayback.rs
scraper/: Cargo.toml
scraper/src/: goodreads.rs  google_reader.rs  lib.rs  netscape_bookmarks.rs  pocket.rs  wayback.rs
src/: anki.rs  eval.rs  main.rs  outline_utils.rs  scrape.rs
src/otlbook/: main.clj  old_outline.clj  otlbook.clj  outline.clj  util.clj
src/otlwiki/: echo.clj  hello.clj  main.clj  outline.clj  util.clj
src/server/: main.clj
tangle/: Cargo.toml
test/otlbook/: otlbook_test.clj  outline_test.clj  util_test.clj
test/otlwiki/: hello_test.clj  outline_test.clj  util_test.clj
wasm/: Cargo.toml
wasm/src/: lib.rs
weave/: Cargo.toml
webserver/: Cargo.toml
webserver/src/: html.rs  lib.rs  resolver.rs
www/: index.html  pkg
