[package]
name = "otlbook"
version = "0.2.0"
authors = ["Risto Saarelma"]
license = "MIT OR Apache-2.0"
edition = "2018"

[workspace]
members = ["anki", "base", "cache", "tangle", "weave", "webserver"]

[dependencies]
anki = { path = "anki" }
base = { path = "base" }
cache = { path = "cache" }
# FIXME
# scraper = { path = "scraper" }
tangle = { path = "tangle" }
weave = { path = "weave" }
webserver = { path = "webserver" }

idm = { git = "https://github.com/rsaarelm/idm" }

chrono = "0.4"
dialoguer = "0.8"
env_logger = "0.8"
log = "0.4"
md5 = "0.7"
nom = "7.0.0-alpha1"
ron = "0.6"
serde = "1"
serde_derive = "1"
structopt = "0.3"
termion = "1"

[dev-dependencies]
pretty_assertions = "0.7"
