[package]
name = "otlbook"
version = "0.2.0"
authors = ["Risto Saarelma"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = ["anki", "base", "cache", "scraper", "tangle", "weave", "webserver"]

[dependencies]
anki = { path = "anki" }
base = { path = "base" }
cache = { path = "cache" }
scraper = { path = "scraper" }
tangle = { path = "tangle" }
weave = { path = "weave" }
webserver = { path = "webserver" }

idm = { git = "https://github.com/rsaarelm/idm" }

chrono = "0.4"
dialoguer = "0.10"
env_logger = "0.9"
log = "0.4"
md5 = "0.7"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
termion = "1"
url = "2"

[dev-dependencies]
pretty_assertions = "1"
