[package]
name = "otlbook"
version = "0.2.0"
authors = ["Risto Saarelma"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = ["anki", "base", "import", "persist", "scrape", "tangle", "weave", "webserver"]

[profile.release-lto]
inherits = "release"
strip = true
opt-level = 's'
lto = true
codegen-units = 1

[dependencies]
anki = { path = "anki" }
base = { path = "base" }
import = { path = "import" }
persist = { path = "persist" }
scrape = { path = "scrape" }
tangle = { path = "tangle" }
weave = { path = "weave" }
webserver = { path = "webserver" }

chrono = "0.4"
dialoguer = "0.10"
env_logger = "0.10"
idm = "0.4"
log = "0.4"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
url = "2"

[dev-dependencies]
pretty_assertions = "1"
