[package]
name = "anki"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Connectivity to Anki spaced repetition program"
keywords = ["anki", "spaced-repetition"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1"
serde_derive = "1"
