[package]
name = "base"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Otlbook base outline store"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
idm = { git = "https://github.com/rsaarelm/idm" }

chrono = "0.4"
dirs = "3"
log = "0.4"
nom = "7.0.0-alpha1"
rayon = "1"

regex = "1"  # TODO: Replace with nomming
lazy_static = "1"

serde = "1"
serde_derive = "1"
serde_plain = "0.3"
walkdir = "2"

[dev-dependencies]
pretty_assertions = "0.7"
ron = "0.6"
