[package]
name = "base"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Otlbook base outline store"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4"
dirs = "4"
idm = { git = "https://github.com/rsaarelm/idm" }
indexmap = { version = "1", features = ["serde"] }
log = "0.4"
nom = "7"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1"
ron = "0.8"
