[package]
name = "parser"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2018"

[dependencies]
anki-connect = { path = "../anki-connect" }
chrono = "0.4"
deunicode = "1"
log = "0.4"
md5 = "0.7"
nom = "5"
serde = "1"
serde_plain = "0.3"
walkdir = "2"

[dev-dependencies]
env_logger = "0.7"
pretty_assertions = "0.6"
ron = "0.5"
