[package]
name = "scrape"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Scraping web resources"
edition = "2018"

[dependencies]
select = "0.5"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
url = "2"

base = { path = "../base" }
