[package]
name = "scraper"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1"
log = "0.4"
parser = { path = "../parser" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5"
serde = "1"
serde_json = "1"
url = "2"
