[package]
name = "scraper"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Extracting data from outside sources"
edition = "2018"

[dependencies]
async-std = "1"
chrono = "0.4"
csv = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
select = "0.5"
serde = "1"
serde_json = "1"
url = "2"

base = { path = "../base" }

[dev-dependencies]
idm = { git = "https://github.com/rsaarelm/idm" }
