[package]
name = "scraper"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Extracting data from outside sources"
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1"
log = "0.4"
select = "0.5"
serde = "1"
serde_json = "1"
ureq = "2"
url = "2"

base = { path = "../base" }

[dev-dependencies]
idm = "0.3"
